- Fixed bug #48811 (Directives in PATH section do not get applied to subdirectories)